2011-12-19  Xavier Perseguers  <xavier@typo3.org>

	* [TASK][!!!] Code cleanup

2011-12-12  Xavier Perseguers  <xavier@typo3.org>

	* [BUGFIX] #32484: Retrieval of groups fails if user is not authorized to list them
	* [TASK][!!!] Code cleanup using PhpStorm

2011-10-07  Michael Miousse  <mmiousse@infoglobe.ca>

	* [BUGFIX] #30520: Authentication failure with TYPO3 4.5.6

2011-08-29  Michael Miousse  <mmiousse@infoglobe.ca>

	* [BUGFIX] #28450: $TYPO3_CONF_VARS['FE']['loginSecurityLevel'] is ignored

2011-08-12  Michael Miousse  <mmiousse@infoglobe.ca>

	* [FEATURE] #28938: Fetch user only by session with CAS

2011-07-14  Michael Miousse  <mmiousse@infoglobe.ca>

	* [TASK][DOC] #3554: Integrate Xavier's documentation
	* [TASK] #27231: Release the extension -> TER
	* [BUGFIX] #28212: Synchronisation script mapping error due to empty username
	* [BUGFIX] #28211: ldaps and TLS does not work
	* [TASK] #26332: Code clean up
	
2011-04-27  Michael Miousse  <mmiousse@infoglobe.ca>
	*Refactoring of classes names and files names to respect TYPO3 format, add a checkup of $GLOBALS['TYPO3_CONF_VARS']['BE']['loginSecurityLevel'] to catch the 
	*case were it is empty (empty mean supechallenged by default), removing of debugs comments
	
2011-04-27  Fabien Udriot <fabien.udriot@ecodev.ch>
	*Bug #25891: Don't set the loginSecurityLevel, references 
	*Feature #3542: Standard TYPO3 authentication as fail-over, references 
	*Task #25915: Merge iglib into ig_ldap_sso_auth, references 
	*Task #26332: Code clean up, references 
	*Bug #25917: Fail when ig_ldap_sso_auth is chained with openid, resolves 
	
2011-04-20  Michael Miousse  <mmiousse@infoglobe.ca>
	*Bug #26149: Synchronisation script do not support multi-ldap

2011-02-16  Michael Miousse  <mmiousse@infoglobe.ca>
	*Feature #13103: Allow multiple configuration records

2010-11-17  Michael Miousse  <mmiousse@infoglobe.ca>
	*Bug #10805: Backend Ldap authentification
	*Feature #10399: Users synchronisation