@@ -12,7 +12,6 @@ $autoload = array(
 	'tx_igldapssoauth_ldap'				=>	$extensionPath . 'lib/class.tx_igldapssoauth_ldap.php',
 	'tx_igldapssoauth_typo3_group'		=>	$extensionPath . 'lib/class.tx_igldapssoauth_typo3_group.php',
 	'tx_igldapssoauth_typo3_user'		=>	$extensionPath . 'lib/class.tx_igldapssoauth_typo3_user.php',
-	'tx_igldapssoauth_utility_db'		=>	$extensionPath . 'classes/utility/class.tx_igldapssoauth_utility_db.php',
 	'tx_igldapssoauth_utility_debug'	=>	$extensionPath . 'classes/utility/class.tx_igldapssoauth_utility_debug.php',
 	'tx_igldapssoauth_utility_ldap'		=>	$extensionPath . 'classes/utility/class.tx_igldapssoauth_utility_ldap.php',
 );
@@ -20,10 +19,10 @@ if(t3lib_extMgm::isLoaded('rsaauth')){
 	// RSA authentication Classes
 	$autoload['tx_rsaauth_backendfactory']			=	t3lib_extMgm::extPath('rsaauth') . 'sv1/backends/class.tx_rsaauth_backendfactory.php';
 	$autoload['tx_rsaauth_storagefactory']			=	t3lib_extMgm::extPath('rsaauth') . 'sv1/storage/class.tx_rsaauth_storagefactory.php';
-	
+
 	// Service authentication Class
 	//'tx_sv_auth'						=>	t3lib_extMgm::extPath('sv') . 'class.tx_sv_auth.php',
 }
-	
+
 return $autoload
 ?>
